--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.2.3",
@@ -36,9 +37,11 @@
     "apollo-server-core": "^3.5.0",
     "apollo-server-fastify": "^3.5.0",
     "bcrypt": "^5.0.1",
+    "fastify": "^3.24.1",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -73,6 +76,7 @@
     "@nrwl/workspace": "13.2.4",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
