--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-devkit/build-angular": "~12.2.14",
     "@angular-eslint/eslint-plugin": "~12.6.0",
     "@angular-eslint/eslint-plugin-template": "~12.6.0",
@@ -65,6 +66,7 @@
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@ngneat/tailwind": "^7.0.3",
     "@nrwl/cli": "13.2.4",
     "@nrwl/cypress": "13.2.4",
     "@nrwl/eslint-plugin-nx": "13.2.4",
@@ -80,13 +82,21 @@
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "^8.3.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
+    "postcss": "^8.4.4",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.19",
+    "@tailwindcss/forms": "0.3.0",
+    "@tailwindcss/typography": "0.4.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.0"
   }
