--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^12.2.14",
     "@angular/core": "^12.2.14",
     "@angular/forms": "^12.2.14",
+    "@angular/localize": "^13.1.1",
     "@angular/platform-browser": "^12.2.14",
     "@angular/platform-browser-dynamic": "^12.2.14",
     "@angular/router": "^12.2.14",
@@ -31,6 +32,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.2.3",
     "@nestjs/typeorm": "^8.0.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@nrwl/angular": "13.2.4",
     "@types/bcrypt": "^5.0.0",
     "apollo-angular": "^2.6.0",
@@ -76,7 +79,10 @@
     "@nrwl/node": "13.2.4",
     "@nrwl/tao": "13.2.4",
     "@nrwl/workspace": "13.2.4",
+    "@tailwindcss/forms": "0.3.0",
+    "@tailwindcss/typography": "0.4.0",
     "@types/jest": "27.0.2",
+    "@types/lodash": "^4.14.178",
     "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -95,8 +101,6 @@
     "postcss-scss": "^4.0.2",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.19",
-    "@tailwindcss/forms": "0.3.0",
-    "@tailwindcss/typography": "0.4.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.0"
   }
