--- a/angular.json
+++ b/angular.json
@@ -8,22 +8,39 @@
       "architect": {
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "libs/authentication/**/*.ts"
-            ]
+            "lintFilePatterns": ["libs/authentication/**/*.ts"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/authentication"
-          ],
+          "outputs": ["coverage/libs/authentication"],
           "options": {
             "jestConfig": "libs/authentication/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "authentication-api-interfaces": {
+      "root": "libs/authentication-api-interfaces",
+      "sourceRoot": "libs/authentication-api-interfaces/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["libs/authentication-api-interfaces/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/authentication-api-interfaces"],
+          "options": {
+            "jestConfig": "libs/authentication-api-interfaces/jest.config.js",
             "passWithNoTests": true
           }
         }
@@ -38,9 +55,7 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/base-components"
-          ],
+          "outputs": ["coverage/libs/base-components"],
           "options": {
             "jestConfig": "libs/base-components/jest.config.js",
             "passWithNoTests": true
@@ -65,20 +80,14 @@
       "architect": {
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "libs/database/**/*.ts"
-            ]
+            "lintFilePatterns": ["libs/database/**/*.ts"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/database"
-          ],
+          "outputs": ["coverage/libs/database"],
           "options": {
             "jestConfig": "libs/database/jest.config.js",
             "passWithNoTests": true
@@ -95,9 +104,7 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/feature-auth"
-          ],
+          "outputs": ["coverage/libs/feature-auth"],
           "options": {
             "jestConfig": "libs/feature-auth/jest.config.js",
             "passWithNoTests": true
@@ -124,9 +131,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/timeseries",
             "index": "apps/timeseries/src/index.html",
@@ -138,9 +143,7 @@
               "apps/timeseries/src/favicon.ico",
               "apps/timeseries/src/assets"
             ],
-            "styles": [
-              "apps/timeseries/src/styles.scss"
-            ],
+            "styles": ["apps/timeseries/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -208,9 +211,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/timeseries"
-          ],
+          "outputs": ["coverage/apps/timeseries"],
           "options": {
             "jestConfig": "apps/timeseries/jest.config.js",
             "passWithNoTests": true
@@ -226,16 +227,12 @@
       "architect": {
         "build": {
           "builder": "@nrwl/node:build",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/timeseries-api",
             "main": "apps/timeseries-api/src/main.ts",
             "tsConfig": "apps/timeseries-api/tsconfig.app.json",
-            "assets": [
-              "apps/timeseries-api/src/assets"
-            ]
+            "assets": ["apps/timeseries-api/src/assets"]
           },
           "configurations": {
             "production": {
@@ -259,20 +256,14 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/timeseries-api/**/*.ts"
-            ]
+            "lintFilePatterns": ["apps/timeseries-api/**/*.ts"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/timeseries-api"
-          ],
+          "outputs": ["coverage/apps/timeseries-api"],
           "options": {
             "jestConfig": "apps/timeseries-api/jest.config.js",
             "passWithNoTests": true
@@ -300,20 +291,14 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/timeseries-api-e2e/**/*.{js,ts}"
-            ]
+            "lintFilePatterns": ["apps/timeseries-api-e2e/**/*.{js,ts}"]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": [
-        "timeseries"
-      ]
+      "implicitDependencies": ["timeseries"]
     },
     "timeseries-api-interfaces": {
       "root": "libs/timeseries-api-interfaces",
@@ -322,13 +307,9 @@
       "architect": {
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "libs/timeseries-api-interfaces/**/*.ts"
-            ]
+            "lintFilePatterns": ["libs/timeseries-api-interfaces/**/*.ts"]
           }
         }
       },
@@ -342,9 +323,7 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/timeseries-data-access"
-          ],
+          "outputs": ["coverage/libs/timeseries-data-access"],
           "options": {
             "jestConfig": "libs/timeseries-data-access/jest.config.js",
             "passWithNoTests": true
