--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
     "strict": true,
     "paths": {
       "@timeseries/authentication": ["libs/authentication/src/index.ts"],
+      "@timeseries/authentication-api-interfaces": [
+        "libs/authentication-api-interfaces/src/index.ts"
+      ],
       "@timeseries/base-components": ["libs/base-components/src/index.ts"],
       "@timeseries/database": ["libs/database/src/index.ts"],
       "@timeseries/feature-auth": ["libs/feature-auth/src/index.ts"],
