--- a/libs/feature-auth/tsconfig.lib.json
+++ b/libs/feature-auth/tsconfig.lib.json
@@ -8,5 +8,8 @@
     "types": []
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts",
+    "../../apps/timeseries/src/app/pages/login/login.bloc.ts"
+  ]
 }
